# Elo2MiniProjekt

./: CMakeLists.txt  README.md  main.c  measure.c  measure.h
Altium/: 01_main.SchDoc  Kaffemaschinen_Ladezustand.PrjPcb  Kaffemaschinen_Ladezustand.PrjPcbStructure  SchLib.SchLib
Altium/__Previews/: 01_main.SchDocPreview  02_powersupply.SchDocPreview
CAD/: Assembly.20240324-185458.FCBak  Assembly.FCStd  Bock.20240322-003023.FCBak  Bock.FCStd  Deckel.20240324-185452.FCBak  Deckel.FCStd  Haube.20240324-184911.FCBak  Haube.FCStd  PCB_Prototyp.20240322-232151.FCBak  PCB_Prototyp.FCStd  Sensor.20240322-093112.FCBak  Sensor.FCStd
